# mini-rag

./: README.md  memory.db  poc.db  pyproject.toml  requirements.txt
version1/: poc_memory.py  result-mac-m3.md
version2/: memory.db  memory.usearch  poc_memory.py  result-mac-m3.md
version3/: index.py
