[project]
name = "poc-mini-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.7.4",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "psutil>=7.2.2",
    "rank-bm25>=0.2.2",
    "sqlite-vec>=0.1.6",
    "usearch>=2.23.0",
]
